--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "server",
+  "name": "ai-harm-watch-server",
   "version": "1.0.0",
+  "description": "Backend API for AI Harm Watch",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "seed": "node seed.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "helmet": "^7.0.0",
+    "uuid": "^9.0.1",
+    "express-rate-limit": "^6.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
